fix(hero): fixes image jump

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -2,4 +2,5 @@
   flex: 1 0 auto;
   display: block;
   width: 100%;
+  height: 300px;
 }
